--- a/client/src/components/Dashboard/sidebar/sidebar.css
+++ b/client/src/components/Dashboard/sidebar/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar{
     flex: 1;
     height: 100vh;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     position: sticky !important;
     top:50px;
     padding-top: 40px !important;
@@ -19,7 +19,7 @@
 }
 .sidebarTitle{
     font-size: 13px;
-    color: lightgray;
+    color: rgb(0, 0, 0);
 }
 .sidebarList{
     list-style: none;
