--- a/client/src/components/AdminDashboard/sidebar/sidebar.css
+++ b/client/src/components/AdminDashboard/sidebar/sidebar.css
@@ -17,7 +17,7 @@
 }
 .sidebarTitle{
     font-size: 13px;
-    color: lightgray;
+    color: rgb(39, 38, 38);
 }
 .sidebarList{
     list-style: none;
