--- a/client/src/components/Dashboard/Pages/AllContract/allcontract.css
+++ b/client/src/components/Dashboard/Pages/AllContract/allcontract.css
@@ -11,7 +11,7 @@
 .allContract_center_div{
     width: 1000px;
     min-height: 510px;
-    margin-top: 70px;
+    /* margin-top: 70px; */
     background-color: rgb(250, 250, 250);
     border-radius: 10px !important;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
