--- a/client/src/components/Dashboard/Pages/AllRequests/allrequest.css
+++ b/client/src/components/Dashboard/Pages/AllRequests/allrequest.css
@@ -10,7 +10,7 @@
 .allrequest_center_div{
     width: 1000px;
     min-height: 510px;
-    margin-top: 70px !important;
+    /* margin-top: 70px !important; */
     background-color: rgb(250, 250, 250);
     border-radius: 10px !important;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
