--- a/client/src/components/Dashboard/Pages/MyRequests/myrequest.css
+++ b/client/src/components/Dashboard/Pages/MyRequests/myrequest.css
@@ -10,7 +10,7 @@
 .myrequest_center_div{
     width: 900px;
     height: 500px;
-    margin-top: 70px !important;
+    /* margin-top: 70px !important; */
     background-color: rgb(250, 250, 250);
     border-radius: 10px !important;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
