--- a/client/src/components/Dashboard/sidebar/sidebar.css
+++ b/client/src/components/Dashboard/sidebar/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar{
     flex: 1;
-    height: 120vh;
+    height: 115vh;
     background-color: rgb(255, 255, 255);
     position: sticky !important;
     top:50px;
@@ -12,6 +12,8 @@
 .sidebarWrapper{
     padding: 20px;
     color: #555;
+    /* position: sticky !important; */
+    margin-bottom: 20px !important;
     
 }
 .sidebarMenu{
